--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         #valentineMessage {
-            font-size: 1.3em;
+            font-size: 1.1em;
             color: #800000;
             opacity: 0;
             transform: scale(0.5);
@@ -92,26 +92,22 @@
 <h1 id="valentineMessage">
     💖 Happy Valentine’s Day 💖<br><br>
 
-    To someone very special — my love, my Premika, my Tabassum ❤️<br><br>
+    To someone very special — my love, my Premika, my Tabassum ❤️<br>
 
-    Years have passed since our first sight love,<br>
-    but trust me, my love for you has only grown stronger with time.<br><br>
+    Years have passed since our first sight love, but trust me, my love<br>
+    for you has only grown stronger with time.<br>
 
-    Ami onek baje chilam, achi…<br>
-    ami tomake onek hurt korsi,<br>
+    Ami onek baje chilam, achi…<br> ami tomake onek hurt korsi,<br>
     and worst of all, ami tomake kandaisi.<br>
     Eitar jonno ami nijer kachei lojja pai.<br><br>
 
-    I know you may never forgive me,<br>
-    but my love, I hope one day I can be forgiven by you —<br>
-    amr jaan, amr premika, amr Tabassum.<br><br>
+    I know you may never forgive me, but my love, I hope one day<br>
+    I can be forgiven by you — amr jaan, amr premika, amr Tabassum.<br>
 
     You make my days brighter, my smiles bigger,<br>
-    and my heart happier just by being you.<br><br>
-
-    Every moment with you feels magical,<br>
-    and I’d love to create many more memories together,<br>
-    even though we’ve faced more downs than ups.<br><br>
+    and my heart happier just by being you. Every moment with you<br>
+    feels magical, and I’d love to create many more memories together,<br>
+    even though we’ve faced more downs than ups.<br>
 
     <strong>From your well wisher,one who wants you-Mohammad Ehtesam Uddin Ahmed ❤️</strong>
 </h1>
