--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
     To someone very special — my love, my Premika, my Tabassum ❤️<br>
 
     Years have passed since our first sight love, but trust me, my love<br>
-    for you has only grown stronger with time.<br>
+    for you has only grown stronger with time.<br><br>
 
     Ami onek baje chilam, achi…<br> ami tomake onek hurt korsi,<br>
     and worst of all, ami tomake kandaisi.<br>
     Eitar jonno ami nijer kachei lojja pai.<br><br>
 
     I know you may never forgive me, but my love, I hope one day<br>
-    I can be forgiven by you — amr jaan, amr premika, amr Tabassum.<br>
+    I can be forgiven by you — amr jaan, amr premika, amr Tabassum.<br><br>
 
     You make my days brighter, my smiles bigger,<br>
     and my heart happier just by being you. Every moment with you<br>
     feels magical, and I’d love to create many more memories together,<br>
-    even though we’ve faced more downs than ups.<br>
+    even though we’ve faced more downs than ups.<br><br>
 
     <strong>From your well wisher,one who wants you-Mohammad Ehtesam Uddin Ahmed ❤️</strong>
 </h1>
