--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         #valentineMessage {
-            font-size: 1.1em;
+            font-size: 0.9em;
             color: #800000;
             opacity: 0;
             transform: scale(0.5);
@@ -97,13 +97,11 @@
     Years have passed since our first sight love, but trust me, my love<br>
     for you has only grown stronger with time.<br><br>
 
-    Ami onek baje chilam, achi…<br> ami tomake onek hurt korsi,<br>
-    and worst of all, ami tomake kandaisi.<br>
-    Eitar jonno ami nijer kachei lojja pai.<br><br>
+    Ami onek baje chilam, achi…ami tomake onek hurt korsi,and worst of all, ami<br> 
+    tomake kandaisi.Eitar jonno ami nijer kachei lojja pai.<br><br>
 
     I know you may never forgive me, but my love, I hope one day<br>
-    I can be forgiven by you — amr jaan, amr premika, amr Tabassum.<br><br>
-
+    I can be forgiven by you — amr jaan, amr premika, amr Tabassum.<br>
     You make my days brighter, my smiles bigger,<br>
     and my heart happier just by being you. Every moment with you<br>
     feels magical, and I’d love to create many more memories together,<br>
